Fixed up some alignment issues on row buttons.

--- a/autom8_client_node/client/css/buttons.less
+++ b/autom8_client_node/client/css/buttons.less
@@ -25,8 +25,9 @@
     background-color: rgba(0, 0, 0, 0.2);
     cursor: pointer;
     border-radius: 12px;
-    padding: 12px 16px;
-    width: 12px;
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
 }
 
 .button-style-2-touched() {
