--- a/autom8_client_node/client/css/devicerow-lamp.less
+++ b/autom8_client_node/client/css/devicerow-lamp.less
@@ -11,7 +11,7 @@
     }
 
     &.has-extras .extras {
-        display: table;
+        display: inline-block;
     }
 
     .extras {
@@ -26,8 +26,7 @@ expander button */
         .extras-button {
             font-size: 90%;
             border-radius: 10px;
-            margin-top: 5px;
-            padding: 10px 12px;
+            line-height: 38px;
         }
     }
 }
