--- a/autom8_client_node/client/css/switcher.less
+++ b/autom8_client_node/client/css/switcher.less
@@ -21,6 +21,7 @@
         position: relative;
         top: -2px;
         display: inline-block;
+        line-height: 18px;
 
         &.left {
             .box-shadow(-1px, 1px, 3px, #222);
